@@ -1,12 +1,12 @@
-#if !defined(DSHOW) && !defined(XBMC)
+#if defined(WASAP) || defined(WINAMP) || defined(FOOBAR2000) || defined(GSPLAYER) || defined(APOLLO)
 #include <windows.h>
+#include "gui.h"
 #endif
 #ifdef WINAMP
 #include <commctrl.h>
 #endif
 
 #include "..\asap.h"
-#include "gui.h"
 
 #ifdef WASAP
 
@@ -60,21 +60,23 @@ IDR_TRAYMENU MENU
 #  define INTERNAL_NAME "gspasap"
 #elif defined(DSHOW)
 #  define INTERNAL_NAME "asap_dsf"
+#  define FILE_DESCRIPTION "ASAP DirectShow source filter"
 #elif defined(APOLLO)
 #  define APP_NAME "Apollo"
 #  define INTERNAL_NAME "ASAP_Apollo"
 #elif defined(XBMC)
 #  define APP_NAME "XBMC"
 #  define INTERNAL_NAME "xbmc_asap"
+#elif defined(APOKEYSND)
+#  define INTERNAL_NAME "apokeysnd"
+#  define FILE_DESCRIPTION "Another POKEY sound emulator"
 #endif
-#ifdef DSHOW
-#define FILE_DESCRIPTION "ASAP DirectShow source filter"
-#else
-#define FILE_DESCRIPTION "ASAP " APP_NAME " plugin"
+#ifndef FILE_DESCRIPTION
+#  define FILE_DESCRIPTION "ASAP " APP_NAME " plugin"
 #endif
 #define ORIGINAL_FILENAME INTERNAL_NAME ".dll"
 
-#if !defined(DSHOW) && !defined(XBMC)
+#if defined(WINAMP) || defined(FOOBAR2000) || defined(GSPLAYER) || defined(APOLLO)
 
 #ifndef _WIN32_WCE
 IDD_SETTINGS DIALOG 0, 0, 184, 216
@@ -139,7 +141,7 @@ FONT 8, "MS Sans Serif"
 #endif
 }
 
-#endif /* !defined(DSHOW) && !defined(XBMC) */
+#endif /* defined(WINAMP) || defined(FOOBAR2000) || defined(GSPLAYER) || defined(APOLLO) */
 
 #ifdef WINAMP
 IDD_PROGRESS DIALOG 0, 0, 160, 48
@@ -185,7 +187,7 @@ FONT 8, "MS Sans Serif"
 	PUSHBUTTON "&Convert", IDC_CONVERT, 164, 82+INFO_Y, 70, 14
 	PUSHBUTTON "Close", IDCANCEL, 242, 82+INFO_Y, 50, 14
 }
-#endif
+#endif /* defined(WASAP) || defined(WINAMP) || defined(APOLLO) */
 
 1 VERSIONINFO
 	FILEVERSION ASAP_VERSION_MAJOR, ASAP_VERSION_MINOR, ASAP_VERSION_MICRO, 0
